[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/img/tilesets/path_floor.tres" type="TileSet" id=1]
[ext_resource path="res://assets/img/tilesets/flower.tres" type="TileSet" id=2]
[ext_resource path="res://assets/img/tilesets/cliff.tres" type="TileSet" id=3]
[ext_resource path="res://assets/img/tilesets/grass.tres" type="TileSet" id=4]
[ext_resource path="res://assets/img/tilesets/tree.tres" type="TileSet" id=5]
[ext_resource path="res://assets/scene/Maps/teleport.tscn" type="PackedScene" id=6]
[ext_resource path="res://script/Object/NavMap.gd" type="Script" id=7]
[ext_resource path="res://assets/scene/Maps/LimitCamera.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/scene/npc/npc.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/scene/enemy/main_system/EnemySpawn.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/img/tilesets/river.tres" type="TileSet" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 116.649, 99.9211 )

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 272.07, 191.428, 171.464, 139.522, 277.92, 106.292, 386.457, 105.523, 429.15, 188.819, 282.142, -29.4527, 165.862, 89.1052, 173.704, 59.9754, 199.25, -1.16639, 277.15, -94.6156, 150.177, 122.716, 135.612, 89.1052, -25.7224, -33.0158, -21.2409, -50.9418, 3.1151, -91.0747, 89.3284, -201.151, 84.7099, -4.09159, 2.80705, 88.8957, -57.3169, 283.378, -91.8736, 286.571, -91.8736, 201.897, -55.0762, 257.61, 1.26753, 205.899, -32.6687, 253.128, 279.768, 369.243, 194.324, 373.708, 193.554, 282.876, 195.556, -94.6156, 121.047, 57.7347, 163.621, 156.328, 111.86, 286.739, 110.739, 255.369, 138.973, 156.328, 389.536, -92.3063, 468.821, -90.7668, 468.359, 279.181, 393.692, 282.26, 391.057, 221.31, 426.909, 217.948, 7.73366, -204.23, -43.6484, -65.5066, -94.183, -91.9985, -62.6948, -47.5806, -91.8737, 88.8957, -45.8892, -29.6546, 39.2594, 131.679, 5.64812, 124.957, 133.371, 141.763, 70.4059, 253.128, 2.28697, 166.411, 35.8982, 161.93, 1.62981, 285.152, -18.1038, 281.138, 63.6836, 282.258 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 5, 2, 1, 6, 7, 8, 9 ), PoolIntArray( 6, 1, 10, 11 ), PoolIntArray( 12, 13, 14, 15, 16, 17 ), PoolIntArray( 18, 19, 20, 21 ), PoolIntArray( 21, 20, 22, 23 ), PoolIntArray( 24, 25, 26, 0 ), PoolIntArray( 8, 27, 9 ), PoolIntArray( 16, 8, 7, 28 ), PoolIntArray( 29, 26, 30, 31, 32 ), PoolIntArray( 3, 33, 34, 4 ), PoolIntArray( 35, 36, 37, 38 ), PoolIntArray( 34, 35, 38, 4 ), PoolIntArray( 1, 0, 26, 29 ), PoolIntArray( 14, 39, 15 ), PoolIntArray( 14, 13, 40 ), PoolIntArray( 41, 14, 40 ), PoolIntArray( 41, 40, 42 ), PoolIntArray( 43, 41, 42 ), PoolIntArray( 43, 42, 44, 17 ), PoolIntArray( 17, 44, 12 ), PoolIntArray( 45, 46, 17, 16, 28, 11, 10, 47 ), PoolIntArray( 31, 48, 22, 49, 50, 32 ), PoolIntArray( 50, 45, 47, 32 ), PoolIntArray( 51, 52, 23, 22, 48, 53 ) ]
outlines = [ PoolVector2Array( 1.62981, 285.152, -18.1038, 281.138, -32.6687, 253.128, -55.0762, 257.61, -57.3169, 283.378, -91.8736, 286.571, -91.8736, 201.897, 1.26753, 205.899, 2.28697, 166.411, 35.8982, 161.93, 39.2594, 131.679, 5.64812, 124.957, 2.80705, 88.8957, -91.8737, 88.8957, -94.183, -91.9985, 3.1151, -91.0747, 7.73366, -204.23, 89.3284, -201.151, 84.7099, -4.09159, 199.25, -1.16639, 195.556, -94.6156, 277.15, -94.6156, 282.142, -29.4527, 277.92, 106.292, 386.457, 105.523, 389.536, -92.3063, 468.821, -90.7668, 468.359, 279.181, 393.692, 282.26, 391.057, 221.31, 426.909, 217.948, 429.15, 188.819, 272.07, 191.428, 279.768, 369.243, 194.324, 373.708, 193.554, 282.876, 111.86, 286.739, 110.739, 255.369, 70.4059, 253.128, 63.6836, 282.258 ), PoolVector2Array( -21.2409, -50.9418, -43.6484, -65.5066, -62.6948, -47.5806, -45.8892, -29.6546, -25.7224, -33.0158 ), PoolVector2Array( 133.371, 141.763, 138.973, 156.328, 163.621, 156.328, 171.464, 139.522, 150.177, 122.716 ), PoolVector2Array( 173.704, 59.9754, 165.862, 89.1052, 135.612, 89.1052, 121.047, 57.7347 ) ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 46.8923, 30.8582 )

[node name="NavMapY" type="YSort"]
script = ExtResource( 7 )
player_drop = [ NodePath("PlayerDrop0"), NodePath("PlayerDrop1") ]
enemy_spawn = [ NodePath("EnemySpawn") ]

[node name="EnemySpawn" parent="." instance=ExtResource( 10 )]
position = Vector2( 106.801, 105.527 )
enemy_group = [ "worm", "kepik" ]

[node name="CollisionShape2D" parent="EnemySpawn" index="0"]
shape = SubResource( 1 )

[node name="Forest" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -1, 2, 0, 65538, 2, 0, 131072, 2, 0, 131074, 2, 0, 196614, 2, 0, 327679, 2, 0, 262145, 2, 0, 458749, 2, 0, 458750, 2, 0, 458751, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 524285, 2, 0, 524286, 2, 0, 524287, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0 )

[node name="NavMap" type="Navigation2D" parent="."]

[node name="Green" type="TileMap" parent="NavMap"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 48, 48 )
cell_quadrant_size = 24
format = 1
tile_data = PoolIntArray( -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -327684, 0, 0, -327683, 0, 65536, -327682, 0, 65536, -327681, 0, 65536, -393216, 0, 65536, -393215, 0, 1, -393214, 0, 65536, -393213, 0, 65537, -393212, 0, 65536, -393211, 0, 65536, -393210, 0, 65537, -393209, 0, 65537, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -196612, 1, 0, -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 0, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 1, 0, -131076, 1, 0, -131075, 1, 0, -196608, 0, 0, -196606, 1, 0, -196605, 1, 0, -196602, 1, 0, -196601, 1, 0, -196598, 1, 0, -196597, 1, 0, -65540, 1, 0, -65539, 1, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131070, 1, 0, -131069, 1, 0, -131068, 0, 0, -131067, 0, 0, -131066, 1, 0, -131065, 1, 0, -131064, 0, 0, -131063, 0, 0, -131062, 1, 0, -131061, 1, 0, -4, 1, 0, -3, 1, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 1, 0, -65529, 1, 0, -65528, 0, 0, -65527, 0, 0, -65526, 1, 0, -65525, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 0, 0, 65535, 0, 65537, 0, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 1, 0, 7, 1, 0, 8, 0, 0, 9, 0, 0, 10, 1, 0, 11, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65538, 0, 0, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 1, 0, 65547, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 0, 0, 131074, 0, 0, 131075, 0, 65537, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 1, 0, 131083, 1, 0, 262140, 1, 0, 262141, 1, 0, 196608, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 1, 0, 196619, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262149, 0, 0, 262150, 1, 0, 262151, 1, 0, 262152, 0, 0, 262153, 0, 0, 262154, 1, 0, 262155, 1, 0, 393212, 1, 0, 393213, 1, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327685, 0, 0, 327686, 1, 0, 327687, 1, 0, 327688, 0, 0, 327689, 0, 0, 327690, 1, 0, 327691, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393221, 0, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 458757, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 655356, 0, 0, 655357, 0, 65537, 655358, 0, 65536, 655359, 0, 0, 589824, 0, 65536, 589825, 0, 65537, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 65536, 589831, 0, 65536, 589832, 0, 65536, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0 )

[node name="DirtPath" type="TileMap" parent="NavMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 48, 48 )
cell_quadrant_size = 32
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -262143, 0, 3, -196607, 0, 65539, -131071, 0, 65539, -65535, 0, 65539, 1, 0, 65539, 65537, 0, 65539, 131073, 0, 65539, 196609, 0, 65539, 262145, 0, 196612, 262146, 0, 196609, 262147, 0, 196609, 262148, 0, 7, 327684, 0, 65539, 393220, 0, 65539, 458756, 0, 65539, 524292, 0, 131075 )

[node name="DirtCliff" type="TileMap" parent="NavMap"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 96, 96 )
cell_quadrant_size = 48
collision_mask = 0
format = 1
tile_data = PoolIntArray( -196610, 0, 0, -196609, 0, 2, -262143, 0, 0, -262142, 0, 2, -131074, 0, 65536, -131073, 0, 65538, -196607, 0, 65536, -196606, 0, 131077, -196605, 0, 1, -196604, 0, 1, -196603, 0, 2, -65538, 0, 65540, -65537, 0, 131074, -131071, 0, 65540, -131070, 0, 131073, -131069, 0, 65544, -131068, 0, 131073, -131067, 0, 65543, -2, 0, 65539, -65535, 0, 131075, -65533, 0, 65539, -65531, 0, 65539, 65534, 0, 65539, 3, 0, 131075, 5, 0, 65539, 131070, 0, 262148, 131071, 0, 196610, 65541, 0, 65539, 196606, 0, 65539, 131075, 0, 3, 131077, 0, 65539, 262142, 0, 196612, 262143, 0, 196609, 196608, 0, 196609, 196609, 0, 196610, 196611, 0, 196612, 196612, 0, 196609, 196613, 0, 196615 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="NavMap"]
position = Vector2( 2.38942, 0.204899 )
navpoly = SubResource( 2 )

[node name="Flower" type="TileMap" parent="NavMap"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 48, 48 )
cell_quadrant_size = 24
format = 1
tile_data = PoolIntArray( -131072, 1, 0, -65527, 1, 0, 4, 8, 0, 131071, 1, 0, 65541, 7, 0, 131074, 5, 0, 131080, 4, 0, 196613, 1, 0, 262144, 6, 0 )

[node name="River" type="TileMap" parent="NavMap"]
tile_set = ExtResource( 11 )
cell_size = Vector2( 48, 48 )
cell_quadrant_size = 24
collision_layer = 32768
collision_mask = 0
format = 1
tile_data = PoolIntArray( -131068, 0, 0, -131067, 0, 2, -2, 0, 0, -1, 0, 2, -65532, 0, 131072, -65531, 0, 131074, 65534, 0, 65540, 65535, 0, 131074, 131070, 0, 131075 )

[node name="Teleport" parent="." instance=ExtResource( 6 )]
position = Vector2( 240.209, 358.072 )
to_location = "example2"
location_name = "Standfor Forest: Center"

[node name="CollisionShape2D" parent="Teleport" index="0"]
shape = SubResource( 3 )

[node name="Teleport2" parent="." instance=ExtResource( 6 )]
position = Vector2( 50.6496, -170.535 )
z_index = 4
to_location = "example3"
location_name = "Standfor Forest: North"
player_drop = 1

[node name="CollisionShape2D" parent="Teleport2" index="0"]
shape = SubResource( 3 )

[node name="PlayerDrop0" type="Position2D" parent="."]
position = Vector2( 60.3893, -97.6081 )

[node name="PlayerDrop1" type="Position2D" parent="."]
position = Vector2( 237.444, 295.152 )

[node name="LimitCamera" parent="." instance=ExtResource( 8 )]

[node name="TopLeft" parent="LimitCamera" index="0"]
position = Vector2( -205.468, -221.81 )

[node name="BottomRight" parent="LimitCamera" index="1"]
position = Vector2( 583.078, 455.076 )

[node name="NPC" parent="." instance=ExtResource( 9 )]
position = Vector2( 431.776, -25.8243 )

[editable path="EnemySpawn"]

[editable path="Teleport"]

[editable path="Teleport2"]

[editable path="LimitCamera"]
